--- a/crates/gb-sdl/Cargo.toml
+++ b/crates/gb-sdl/Cargo.toml
@@ -5,4 +5,8 @@ edition = "2021"
 
 [dependencies]
 gb-core = { path = "../gb-core" }
-sdl2 = "0.36"
+sdl2 = { version = "0.36", optional = true }
+
+[features]
+default = []
+sdl = ["dep:sdl2"]
