Update .gitignore and enhance gb-cli with VRAM BG tilemap scraping for better ROM result detection
- Expanded .gitignore to include additional backup and editor files.
- Added support in gb-cli for VRAM BG tilemap scraping to detect PASS/FAIL for ROMs that render results on-screen, improving debugging capabilities with the new `--print-vram` flag.
- Updated roadmap documentation to reflect these changes and clarify the status of `halt_bug.gb`.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,34 @@
-/target
-/roms
+# Rust / Cargo
+# See https://doc.rust-lang.org/cargo/ for more information
+
+# Build output
+/target/
+
+# Project-specific (keep ROMs out of the repo)
+/roms/
+*.gb
+
+# Backup files
+**/*.rs.bk
+
+# If you're building a binary, consider checking in Cargo.lock
+# (comment out the next line to track it)
+# Cargo.lock
+
+# Caches and generated files
+/.cargo/
+coverage/
+*.profraw
+
+# IDEs and editors
+.vscode/
+.idea/
+*.iml
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Editor swap/backup files
+*~
+*.swp
