update dependencies and fix SDL color issue

--- a/crates/gb-sdl/Cargo.toml
+++ b/crates/gb-sdl/Cargo.toml
@@ -5,8 +5,5 @@ edition = "2021"
 
 [dependencies]
 gb-core = { path = "../gb-core" }
-sdl2 = { version = "0.36", optional = true }
+sdl2 = { version = "0.36", features = ["use-pkgconfig"] }
 
-[features]
-default = []
-sdl = ["dep:sdl2"]
