--- a/crates/gb-core/Cargo.toml
+++ b/crates/gb-core/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2021"
 
 [dependencies]
 bitflags = "2"
+serde = { version = "1.0", features = ["derive"] }
+serde_bytes = "0.11"
+serde-big-array = "0.5"
