--- a/crates/gb-sdl/Cargo.toml
+++ b/crates/gb-sdl/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bincode = "3.0.0"
+bincode = "1.3.3"
 egui = "0.33.3"
-egui_sdl2_gl = "0.33.2"
+egui_sdl2_gl = { version = "0.33.2", default-features = false, features = ["sdl2_use-pkgconfig"] }
 gb-core = { path = "../gb-core" }
 gl = "0.14.0"
 rfd = "0.17.2"
