--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y pkg-config libwayland-dev libxkbcommon-dev wayland-protocols
+          sudo apt-get install -y pkg-config libwayland-dev libxkbcommon-dev wayland-protocols patchelf
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
@@ -62,6 +62,26 @@ jobs:
           cp "target/${{ matrix.target }}/release/gb-cli" "dist/${NAME}/"
           cp "target/${{ matrix.target }}/release/gb-sdl" "dist/${NAME}/"
 
+          if [[ "$RUNNER_OS" == "macOS" ]]; then
+            SDL_DYLIB="$(find "target/${{ matrix.target }}" -type f -name "libSDL2-2.0.0.dylib" | head -n 1)"
+            if [[ -z "${SDL_DYLIB}" ]]; then
+              echo "Could not find libSDL2-2.0.0.dylib in target/${{ matrix.target }}" >&2
+              exit 1
+            fi
+
+            cp "${SDL_DYLIB}" "dist/${NAME}/"
+            install_name_tool -add_rpath "@executable_path" "dist/${NAME}/gb-sdl"
+          elif [[ "$RUNNER_OS" == "Linux" ]]; then
+            SDL_SO="$(find "target/${{ matrix.target }}" -type f -name "libSDL2-2.0.so*" | head -n 1)"
+            if [[ -z "${SDL_SO}" ]]; then
+              echo "Could not find libSDL2-2.0.so* in target/${{ matrix.target }}" >&2
+              exit 1
+            fi
+
+            cp "${SDL_SO}" "dist/${NAME}/"
+            patchelf --set-rpath '$ORIGIN' "dist/${NAME}/gb-sdl"
+          fi
+
           tar -C dist -czf "dist/${NAME}.tar.gz" "${NAME}"
 
       - name: Package artifacts (Windows)
@@ -74,6 +94,12 @@ jobs:
 
           Copy-Item "target/${{ matrix.target }}/release/gb-cli.exe" "dist/$name/"
           Copy-Item "target/${{ matrix.target }}/release/gb-sdl.exe" "dist/$name/"
+
+          $sdlDll = Get-ChildItem "target/${{ matrix.target }}" -Recurse -Filter "SDL2.dll" | Select-Object -First 1
+          if (-not $sdlDll) {
+            throw "Could not find SDL2.dll in target/${{ matrix.target }}"
+          }
+          Copy-Item $sdlDll.FullName "dist/$name/"
 
           Compress-Archive -Path "dist/$name/*" -DestinationPath "dist/$name.zip" -Force
 
